--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ android {
     defaultConfig {
         applicationId "com.hust.bookflow"
         minSdkVersion 17
-        targetSdkVersion 25
+        targetSdkVersion 24
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -34,28 +34,29 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
+    //RxJava
+    //Retrofit
+    //glide
+    //GreenDao
+    //View
+    //    compile 'com.android.support:appcompat-v7:25.3.1'
+    compile files('libs/jsoup-1.10.1.jar')
     compile 'com.android.support:appcompat-v7:24.0.0'
     compile 'com.android.support:cardview-v7:24.0.0'
     compile 'com.android.support:recyclerview-v7:24.0.0'
     compile 'com.android.support:design:24.0.0'
     compile 'com.android.support:palette-v7:24.0.0'
     compile 'com.android.support:preference-v7:24.0.0'
-    //RxJava
     compile 'io.reactivex:rxjava:1.1.0'
     compile 'io.reactivex:rxandroid:1.1.0'
-    //Retrofit
     compile 'com.squareup.retrofit2:retrofit:2.1.0'
     compile 'com.squareup.retrofit2:adapter-rxjava:2.1.0'
     compile 'com.squareup.retrofit2:converter-gson:2.1.0'
     compile 'com.google.code.gson:gson:2.8.0'
-    //glide
     compile 'com.github.bumptech.glide:glide:3.7.0'
-    //GreenDao
     compile 'org.greenrobot:greendao:3.2.0'
-    //View
     compile 'de.psdev.licensesdialog:licensesdialog:1.8.1'
     compile 'com.roughike:bottom-bar:2.0.2'
-//    compile 'com.android.support:appcompat-v7:25.3.1'
+    compile 'com.android.support.constraint:constraint-layout:1.0.0-alpha7'
     testCompile 'junit:junit:4.12'
-    compile files('libs/jsoup-1.10.1.jar')
 }
