--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,14 +1,19 @@
+<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-
     package="com.hust.bookflow">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+
+    <!-- To auto-complete the email text field in the login form with the user's emails -->
+    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
+    <uses-permission android:name="android.permission.READ_PROFILE" />
+    <uses-permission android:name="android.permission.READ_CONTACTS" />
 
     <application
-        android:name="com.hust.bookflow.MyApplication"
+        android:name=".MyApplication"
         android:allowBackup="true"
         android:icon="@mipmap/jb_ico"
         android:label="@string/app_name"
@@ -17,38 +22,47 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".activity.MainActivity"
-            android:screenOrientation="nosensor"
-            >
+            android:screenOrientation="nosensor">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
+                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER"/>
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
-            android:theme="@style/AppTheme_NOTransluce"
-            android:windowSoftInputMode="adjustPan|stateHidden"
             android:name=".activity.SearchActivity"
             android:screenOrientation="nosensor"
-            />
+            android:theme="@style/AppTheme_NOTransluce"
+            android:windowSoftInputMode="adjustPan|stateHidden" />
         <activity
             android:name=".activity.MovieDetailsActivity"
-            android:screenOrientation="nosensor"
-            />
+            android:screenOrientation="nosensor" />
         <activity
             android:name=".activity.ActorDetailsActivity"
-            android:screenOrientation="nosensor"
-            />
+            android:screenOrientation="nosensor" />
         <activity
             android:name=".activity.BookDetailsActivity"
-            android:screenOrientation="nosensor"
-            />
-
+            android:screenOrientation="nosensor" />
         <activity
-            android:theme="@style/AppTheme_NOTransluce"
             android:name=".activity.WebViewActivity"
             android:screenOrientation="nosensor"
-            />
+            android:theme="@style/AppTheme_NOTransluce" />
+        <activity
+            android:name=".activity.LoginActivity"
+            android:label="@string/title_activity_login"
+            android:screenOrientation="nosensor">
+
+            <!--
+            android:parentActivityName=".activity.MainActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.hust.bookflow.activity.MainActivity" />
+            -->
+        </activity>
+        <activity
+            android:name=".activity.RegisterActivity"
+            android:label="@string/title_activity_register"
+            android:theme="@style/AppTheme"></activity>
     </application>
 
 </manifest>
