--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,5 +58,7 @@ dependencies {
     compile 'de.psdev.licensesdialog:licensesdialog:1.8.1'
     compile 'com.roughike:bottom-bar:2.0.2'
     compile 'com.android.support.constraint:constraint-layout:1.0.0-alpha7'
+    //扫码
+    compile 'com.google.zxing:core:3.3.0'
     testCompile 'junit:junit:4.12'
 }
